--- a/medication/medication.manager.servlet.ui/src/main/resources/css/new_prescription.css
+++ b/medication/medication.manager.servlet.ui/src/main/resources/css/new_prescription.css
@@ -7,4 +7,4 @@ form table:first-child td label { display: inline-block; margin-right: 5px; }
 form table:first-child td.notes textarea { display: block; height: 2.5em; width: 99%; min-width: 300px; }
 form table#prescription .action { min-width: 10px; text-align: center; vertical-align: middle; }
 form table#prescription .action button { width: 80px; }
-form table#prescription tr.templ1 td div { min-width: 200px; height: 50px; overflow: auto; }
+form table#prescription tr.templ1 td textarea { min-width: 200px; height: 50px; width: 99%; border:none; }
