added color (red, green, black) depending on the intake status

--- a/medication/medication.manager.servlet.ui.review/src/main/resources/css/intakes.css
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/css/intakes.css
@@ -2,3 +2,5 @@ form { text-align: left; float: left; display: block; width: 100%; }
 
 table { width: 100; }
 table tr td, table tr th { vertical-align: middle; }
+.red{color:red}
+.green{color:green}
