--- a/medication/medication.manager.servlet.ui.review/src/main/resources/css/intakes.css
+++ b/medication/medication.manager.servlet.ui.review/src/main/resources/css/intakes.css
@@ -4,5 +4,5 @@ body table tr td, table tr th { vertical-align: middle; }
 .green{color:green}
 body .left { float: left; }
 body .right { float: right; }
-body .leftupper { float: left; }
-body .rightupper { float: right; }
+body .leftupper { float: left; margin-left: 20%}
+body .rightupper { float: right; margin-right: 20%}
