Enabled the panic button and POI list for GuideMe. Added contact management.

--- a/help_when_out/hwo.android/res/layout/activity_startup.xml
+++ b/help_when_out/hwo.android/res/layout/activity_startup.xml
@@ -12,26 +12,44 @@
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:text="@string/startup_button" />
-
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleLarge"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
 
     <Button
         android:id="@+id/stop"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/stop_button"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/panic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:enabled="false"
+        android:text="@string/panic_button" />
+
+    <TextView
+        android:id="@+id/textPOITitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/panic"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/stop_button" />
+        android:layout_marginTop="27dp"
+        android:text="@string/poi_title"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textPOITitle"
+        android:layout_centerHorizontal="true" >
+    </ListView>
 
 </RelativeLayout>
